--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "dev": "nodemon --watch * --exec electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "https://gustavozapata.me",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^8.2.4"
+    "electron": "^8.2.4",
+    "nodemon": "^2.0.3"
   },
   "dependencies": {
     "axios": "^0.19.2"
