--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 # GZ
 /Local
 /server
+/assets/images/Backup
 .DS_Store
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
