--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "description": "list your assets, documents, and know where they are",
   "author": "Gustavo Zapata https://gustavozapata.me contact@gustavozapata.me",
+  "license": "ISC",
   "main": "main.js",
   "scripts": {
     "postinstall": "install-app-deps",
     "start": "npm install && electron .",
-    "pack": "build --dir",
-    "dist": "build",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
     "dev": "nodemon --watch * --exec electron ."
   },
   "build": {
     "appId": "me.gustavozapata.kapp",
-    "category": "Personal, Productivity",
     "dmg": {
       "contents": [
         {
@@ -39,8 +39,6 @@
       "icon": "build/icon.ico"
     }
   },
-  "keywords": [],
-  "license": "ISC",
   "devDependencies": {
     "electron": "^8.2.4",
     "electron-builder": "^22.6.1",
