--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Local.js
 /server
 /assets/images/Backup
 .DS_Store
+TODO.md
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
